# entrospy

./: .gitignore  CMakeLists.txt  Makefile  README.md  entrospy.cpp
entrospy/: category.cpp  entrospy.cpp  graph.cpp  output.cpp  shannon.cpp
entrospy/include/: category.hpp  graph.hpp  output.hpp  shannon.hpp
